# zip-on-the-fly

./: .gitignore  README.md  pyproject.toml
tests/: test_zip_on_the_fly.py
zip_on_the_fly/: __init__.py  archive.py  counters.py  elements.py  iterators.py  primitives.py  zip_format.py
