[tool.poetry]
name = "zip-on-the-fly"
version = "0.1.0"
description = "Stupidly simple async implementation of uncompressed ZIP stream"
authors = ["McFeod <fedoseyevgi@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8-annotations-complexity = "^0.0.7"
flake8 = "3.9.0"
flake8-black = "^0.3.2"
flake8-blind-except = "^0.2.0"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^22.1.11"
flake8-builtins = "^1.5.3"
flake8-class-attributes-order = "^0.1.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.8.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.2.0"
flake8-expression-complexity = "^0.0.10"
flake8-functions = "^0.0.7"
flake8-functions-names = "^0.3.0"
flake8-isort = "^4.1.1"
flake8-pie = "^0.15.0"
flake8-print = "^4.0.0"
flake8-pylint = "^0.1.3"
flake8-pytest-style = "^1.6.0"
flake8-use-fstring = "^1.3"
flake8-variables-names = "^0.0.5"
flakehell = "^0.9.0"
mypy = "^0.931"
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"
tox = "^3.24.5"
tox-poetry = "^0.4.1"

[tool.isort]
profile = "black"

[tool.flakehell]
max-complexity = 10
max-line-length = 120
docstring-convention = "google"

[tool.flakehell.plugins]
flake8-docstrings = ["-D105", "+*"]
flake8-pylint-plugin = ["-PLR0903", "+*"]
"flake8-*" = ["+*"]

[tool.flakehell.exceptions."tests/"]
flake8-docstrings = ["-*"]
flake8-pylint-plugin = ["-PLC0114", "-PLC0116"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311
skip_missing_interpreters = true

[testenv]
commands =
  flakehell lint zip_on_the_fly
  flakehell lint tests
  mypy zip_on_the_fly
  pytest tests
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
